; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-banner1.c_banner1_destroy.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-banner1.c_banner1_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Banner1 = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @banner1_destroy(%struct.Banner1* %0) #0 {
  %2 = alloca %struct.Banner1*, align 8
  store %struct.Banner1* %0, %struct.Banner1** %2, align 8
  %3 = load %struct.Banner1*, %struct.Banner1** %2, align 8
  %4 = icmp eq %struct.Banner1* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %29

6:                                                ; preds = %1
  %7 = load %struct.Banner1*, %struct.Banner1** %2, align 8
  %8 = getelementptr inbounds %struct.Banner1, %struct.Banner1* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %6
  %12 = load %struct.Banner1*, %struct.Banner1** %2, align 8
  %13 = getelementptr inbounds %struct.Banner1, %struct.Banner1* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @smack_destroy(i64 %14)
  br label %16

16:                                               ; preds = %11, %6
  %17 = load %struct.Banner1*, %struct.Banner1** %2, align 8
  %18 = getelementptr inbounds %struct.Banner1, %struct.Banner1* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %26

21:                                               ; preds = %16
  %22 = load %struct.Banner1*, %struct.Banner1** %2, align 8
  %23 = getelementptr inbounds %struct.Banner1, %struct.Banner1* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @smack_destroy(i64 %24)
  br label %26

26:                                               ; preds = %21, %16
  %27 = load %struct.Banner1*, %struct.Banner1** %2, align 8
  %28 = call i32 @free(%struct.Banner1* %27)
  br label %29

29:                                               ; preds = %26, %5
  ret void
}

declare dso_local i32 @smack_destroy(i64) #1

declare dso_local i32 @free(%struct.Banner1*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
